# CPPNetworking

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
configuration/: build.py
source/Client/: CMakeLists.txt  main.cpp
source/Client/source/: TestClass.hpp
source/Common/: CMakeLists.txt
source/Common/source/: TestClass.cpp
source/Common/source/Mapping/: Mappable.h  Mapper.h
source/Common/source/Model/: Dog.cpp  Dog.h
source/Common/source/Network/: Config.cpp  Config.h  HTTP.cpp  HTTP.h
source/Common/source/Network/Files/: Downloader.cpp  Downloader.h  Uploader.cpp  Uploader.h
source/Common/source/Network/Request/: Core.cpp  Core.h  Network.cpp  Network.h
source/Common/source/Network/Responses/: ArrayResponse.h  FileResponse.cpp  FileResponse.h  ObjectResponse.h  Response.cpp  Response.h
source/Server/: CMakeLists.txt  main.cpp
source/client_test/: CMakeLists.txt  main.cpp
source/networking/: CMakeLists.txt
source/networking/authorization/: TokenStorage.cpp  TokenStorage.hpp
source/networking/client/: Client.cpp  Client.hpp
source/networking/common/: LoginData.hpp  NetworkingTypes.cpp  NetworkingTypes.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
source/networking/server/: BaseRequest.hpp  Error.cpp  Error.hpp  NotFoundRequest.cpp  NotFoundRequest.hpp  Server.cpp
source/networking_test/: CMakeLists.txt  ClientTest.cpp  ClientTest.hpp  ServerTest.cpp  ServerTest.hpp  main.cpp
source/server_test/: CMakeLists.txt  main.cpp
